--- a/app/src/main/res/drawable/activity_main.xml
+++ b/app/src/main/res/drawable/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    >
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="300dp"
