--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -13,6 +13,12 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
+        <CheckBox
+            android:id="@+id/cbCartItemSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical" />
+
         <ImageView
             android:id="@+id/imgCartItem"
             android:layout_width="80dp"
@@ -69,7 +75,7 @@
                 android:src="@drawable/ic_delete"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Remove item"
-                android:tint="@color/error" />
+                app:tint="@color/error" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
