--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -57,7 +57,7 @@
                     android:checkable="true" />
                 <item
                     android:id="@+id/home_user_loaiSP"
-                    android:title="loại sản phẩm"
+                    android:title="Loại sản phẩm"
                     android:icon="@drawable/iconsp"
                     android:checkable="true" />
             </menu>
